# cas2json

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  REUSE.toml  pyproject.toml
.github/workflows/: draft-release.yml  publish-pypi.yml
cas2json/: __init__.py  constants.py  enums.py  exceptions.py  flags.py  parser.py  patterns.py  types.py  utils.py
cas2json/cams/: __init__.py  helpers.py  parser.py  processor.py  types.py
cas2json/cdsl/: __init__.py  parser.py  processor.py  types.py  utils.py
cas2json/nsdl/: __init__.py  constants.py  parser.py  processor.py  types.py
